--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "to-do-list",
   "private": true,
@@ -14,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^7.6.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -27,6 +27,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "vite": "^6.3.5"
   }
 }
